sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:12: error: illegal start of simple expression
              }}
              ^AlgBubbleSort2:12: error: 'while' expected but '}' found.
              }}
               ^