sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {var change:Boolean=true
            do{ change=false
              for (i<-0 to getNombreValeurs-2)
              {
                for (j<-0 to i)
                {if (!plusPetit (i,i+1)  )
               {echange(i,i+1)
                change=true}}}
               
              while (change==true)
              }}



